fix: ajuste de z-index

--- a/src/templates/profile/profile.scss
+++ b/src/templates/profile/profile.scss
@@ -90,6 +90,8 @@
                 right: 0;
                 bottom: 0;
 
+                z-index: 10;
+
                 background: linear-gradient(0deg, black 5%, transparent 100%);
             }
         }
