--- a/src/templates/projects-list/projects-list.scss
+++ b/src/templates/projects-list/projects-list.scss
@@ -147,12 +147,12 @@
             opacity: 0;
             visibility: hidden;
 
-            z-index: 1;
-
             display: block;
             line-height: 2em;
 
             background: linear-gradient(0deg, rgba(0, 0, 0, 0.97) 25%, transparent 100%);
+
+            z-index: 20;
         }
 
         &:hover:after {
